# napari_ants_plugin

./: .gitignore  LICENSE  README.md  napari.yaml  setup.cfg
napari_ants_plugin/: main.py  napari.yaml  pipeline.py  regions.py  regions_gpu.py  register.py  run_cellfinder.py  stats.py  volumes.py
napari_ants_plugin/core/: align.py  cells.py  detect.py  labeling.py  transform.py  utils.py
napari_ants_plugin/core/countgd/: predict.py
napari_ants_plugin/core/countgd/datasets/: coco.py
napari_ants_plugin/gui/: widgets.py
napari_ants_plugin/io/: downsample.py  downsample_gpu.py  register_atlas_to_downsampled.py  tiff2zarr.py  upsample.py
napari_ants_plugin/tests/: test_plugin.py
napari_ants_plugin/vis/: points_3d.html
