[metadata]
name = napari_ants_plugin
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    antspyx
    gdown
    addict
    yapf
    torch
    torchvision
    pycocotools
    transformers
    timm
    cupy
    zarr
    dask
    dask-cuda
    tifffile
    opencv-python-headless

[options.entry_points]
napari.manifest =
    napari_ants_plugin = napari_ants_plugin:napari.yaml